--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@libsql/client": "^0.6.0",
+    "dockerode": "^4.0.2",
     "dotenv-cli": "^7.4.2",
     "drizzle-orm": "^0.30.10",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
